# AI-workforce-

./: .dockerignore  .env.example  .gitignore  02_your_first_readable_model.ipynb  Makefile  README.md  package.json  pyproject.toml  requirements.txt
agents/: README.md  __init__.py
agents/email_agent/: README.md  __init__.py  agent.py
agents/hr_agent/: README.md  __init__.py  agent.py
agents/receptionist/: README.md  __init__.py  agent.py
agents/telecalling_agent/: README.md  __init__.py  agent.py
agents/whatsapp_agent/: README.md  __init__.py  agent.py
ai_workforce_backend.egg-info/: PKG-INFO  SOURCES.txt
analytics/: README.md
apps/: README.md
apps/admin/: README.md  package.json
apps/landing/: README.md  package.json
apps/web/: README.md  package.json
backend/: README.md  __init__.py  app.py
backend/api/: README.md  router.py
backend/core/: README.md  config.py  deps.py  exceptions.py  integration_crypto.py  logging.py  middleware.py  security.py
backend/database/: README.md  __init__.py
backend/services/: README.md  auth_service.py  (+8 more)
database/: README.md  __init__.py
docs/: README.md  architecture.md
infrastructure/: README.md
integrations/: README.md
knowledge/: README.md
memory/: README.md  __init__.py
orchestration/: README.md  __init__.py
runtime/: README.md  main.py
scripts/: generate_openapi.py  replace_imports.py
shared/: README.md
tests/: README.md  conftest.py  test_auth_service.py  test_core_engine.py  test_integration_hub.py  test_knowledge_engine.py  test_rbac.py  test_runtime.py  test_tenant_isolation.py
(+249 files in other folders)
